# june

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  planning.md
allocator/: allocator.c
comparison/: circular_linked_list_abstraction.rs  enum_catch_all.rs  lifetime_alloc_infer_success.rs  struct.rs
docs/: architecture.md  language.md  philosophy.md
examples/: bad_condition.june  boolean.june  call_labeled.june  call_labeled_error.june  circular_linked_list.june  circular_linked_list_abstraction.june  double.june  error_allocation_escape_allocator.june  full_file.june  hello_fun.june  hello_fun_rev_order.june  hello_fun_rev_order2.june  hello_main.june  int.june  int_math.june  int_math_main.june  lifetime_alloc_infer_error.june  lifetime_error.june  lifetime_infer_helper_function.june  load_file.june  method_immutable_self_error.june  method_in_method.june  method_mutation.june  method_simple.june  return_value.june  struct.june  struct_allocator.june  struct_field.june  struct_field_access_caller2.june  struct_field_math.june  struct_field_math_mainless.june  struct_field_update.june  struct_helper.june  struct_helper_deep.june  struct_new_field_error.june  struct_raw.june  struct_small.june  variable.june  variable_and_function.june  variable_bad_optional_type.june  (+7 more)
src/: cli.rs  codegen.rs  compiler.rs  delta.rs  errors.rs  lexer.rs  lifetime_checker.rs  main.rs  new.rs  parser.rs  run.rs  tests.rs  typechecker.rs
tests/: alias_inference.june  alias_inference2.june  alias_inference_error.june  alias_return_error.june  enum_catchall.june  (+72 more)
(+208 files in other folders)
